--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       document.getElementById("info").innerHTML = `
         <h2>Mis fotos</h2>
         <div class="galeria">
-          <img src="liah.jpeg" alt="Liah 1">
+          <img src="LIAH.jpeg" alt="Liah 1">
           <img src="liah2.jpeg" alt="Liah 2">
           <img src="liah3.jpeg" alt="Liah3">
         </div>
@@ -140,3 +140,4 @@
 </style>
 
 </html>
+
